themes/tkmngy/assets/scss/_variable.scss
// Base
$base-primary: 1;
$base-secondary: 1.4;

// Pallet
$pallet-white: hsl(200, 40, 96);
$pallet-gray-sunlight: hsl(200, 40, 84);
$pallet-gray-twilight: hsl(200, 16, 48);
$pallet-gray-midnight: hsl(200, 16, 32);
$pallet-black-abyss: hsl(200, 32, 16);
$pallet-black-hadal: hsl(200, 16, 8);
$pallet-blue: hsl(200, 56, 40);
$pallet-lightblue: hsl(200, 56, 64);

// Ratio
$ratio: 1.73;

// Font
$font-primary: "a-otf-futo-min-a101-pr6n", serif;
$font-sans-serif: "游ゴシック", YuGothic, "Helvetica Neue", Helvetica,  sans-serif;
$font-serif: "ten-mincho-text", "游明朝", YuMincho, "Hiragino Mincho ProN", Meiryo, serif;
$font-monospace: "source-code-pro", Consolas, Menlo, monospace;

// Font Size
$default-font-size: ( $base-primary * 1rem );
$large-font-size: ( $base-secondary * 1rem );
$larger-font-size: ( $default-font-size * $ratio );
$largest-font-size: ( $larger-font-size * $ratio );
$small-font-size: ( $large-font-size / $ratio );

$font-size-root-default: ( $base-primary * 100% );
$font-size-root-large: ( ( $base-primary + $base-secondary ) / 2 * 100% );
$font-size-root-largest: ( $base-secondary * 100% );

// Margin
$space-default: ( $base-primary * $ratio * 1rem);
$space-small: ( $space-default / $ratio );
$space-tiny: ( $space-small / $ratio );
$space-large: ( $space-default * $ratio );
$space-larger: ( $space-large * $ratio );
$space-largest: ( $space-larger * $ratio );

// CSS Variables
:root {
  --color-background-primary: #{$pallet-white};
  --color-background-secondary: #{$pallet-gray-sunlight};
  --color-foreground-primary: #{$pallet-black-hadal};
  --color-foreground-secondary: #{$pallet-gray-midnight};
  --color-spot-primary: #{$pallet-blue};

  --image-logo: url("/img/tkmngy.png");
 
  --base-font-size: #{$font-size-root-default};
  --base-line-height: #{$ratio};

  line-height: var( --base-line-height );
  font-size: var( --base-font-size );
  background-color: var( --color-background-primary );
  color: var( --color-foreground-primary );
}

// for Dark Mode
@media ( prefers-color-scheme: dark ) {
  :root {
    --color-background-primary: #{$pallet-black-abyss};
    --color-background-secondary: #{$pallet-gray-midnight};
    --color-foreground-primary: #{$pallet-white};
    --color-foreground-secondary: #{$pallet-gray-sunlight};
    --color-spot-primary: #{$pallet-lightblue};

    --image-logo: url("/img/tkmngy_white.png");
  }
}

@media ( min-width: 40em ) {
  :root {
    --base-font-size: #{$font-size-root-large};
  }
}

@media ( min-width: 72em ) {
  :root {
    --base-font-size: #{$font-size-root-largest};
  }
}

